CW_spell/spellcheck_q36172hw/fback.txt
Submission ran but did not finish its execution due to the errors below. 
This does not mean the program did not execute however, it may or may not have produced some files or none: 

   File "***Removed due to privacy***/spellcheck_q36172hw/./spellcheck_q36172hw.py", line 12
    print(I cannot finish this task, sorry)
            ^
SyntaxError: invalid syntax

No files were created within the results folder. (This does not mean files were not created elsewhere)
